<resources>
    <string name="app_name">Timeline</string>
    <string name="action_settings">Settings</string>

    <!-- NAVIGATION DRAWER -->
    <string name="timeline_drawer_open">Drawer open</string>
    <string name="timeline_drawer_close">Drawer close</string>

    <!-- FORM -->
    <string name="form_label_name">Name</string>
    <string name="form_label_location">Location</string>
    <string name="form_label_description">Description</string>
    <string name="form_label_start_date">Start date</string>
    <string name="form_label_end_date">End date</string>


    <string name="label_add_track">Add track</string>
    <string name="label_add_event">Add event</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
